switch tablet layout breakpoint to 959px, minor UI fixes

--- a/jsapp/scss/components/_kobo.form-view.scss
+++ b/jsapp/scss/components/_kobo.form-view.scss
@@ -27,6 +27,7 @@
   width: calc(100% - 180px);
   height: calc(100% - 48px);
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .form-view__toptabs {
