--- a/jsapp/scss/components/_kobo.report-view.scss
+++ b/jsapp/scss/components/_kobo.report-view.scss
@@ -147,6 +147,31 @@
   }
 }
 
+@media screen and (max-width: 959px) {
+  .form-view__reportButtons {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .form-view__reportButtons {
+    button.mdl-button {
+      font-size: 13px;
+    }
+
+    button.report-button__print {
+      display: none;
+    }
+
+    button.report-button__expand {
+      margin-left: 0px;
+      padding-left: 4px;
+      padding-right: 4px;
+    }
+  }
+}
+
 // report graph settings
 
 .graph-settings__charttype, .graph-settings__colors {
